Contact: added Copy to clipboard functionality to email, margins for socials, corrected container errors in button and email. About: corrected line breaking errors. Header : added extra paddings and margins for small screen. Heading: reduced opacity for line

--- a/src/components/heading/Heading.css
+++ b/src/components/heading/Heading.css
@@ -30,7 +30,7 @@
 .app__heading-main-group-line {
   flex-grow: 1;
   height: 1px;
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .app__heading-main-icons {
