--- a/src/container/header/Header.css
+++ b/src/container/header/Header.css
@@ -104,7 +104,7 @@
 
 @media screen and (max-width: 500px) {
   .app__header {
-    padding: 4rem 2rem;
+    padding: 6rem 2rem 4rem;
   }
   
   .app__header-content p:first-child {
@@ -119,6 +119,10 @@
   .app__header-content h3 {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .app__header-img {
+    margin-top: 2rem;
   }
   
   .app__header-img img {
